[package]
name = "dnsstamps"
version = "0.1.3"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Create and parse DNS Stamps"
keywords = ["dns", "dnscrypt", "doh", "stamps"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-dnsstamps"
repository = "https://github.com/jedisct1/rust-dnsstamps"

[dependencies]
base64 = "0.12.0"
byteorder = "1.3"
