[package]
name = "dnsstamps"
version = "0.1.9"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Create and parse DNS Stamps"
keywords = ["dns", "dnscrypt", "doh", "stamps", "odoh"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-dnsstamps"
repository = "https://github.com/jedisct1/rust-dnsstamps"

[dependencies]
ct-codecs = "1.1.1"
byteorder = "1.4.3"
